--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "express": "^4.19.2",
     "mercadopago": "^2.0.11",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
