--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.4",
     "express": "^4.19.2",
+    "firebase": "^10.12.4",
     "mercadopago": "^2.0.11",
     "next": "14.2.5",
     "react": "^18",
