--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.13.0",
     "mercadopago": "^2.0.11",
@@ -18,6 +19,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
     "eslint": "^8",
