add security to mercado pago access token

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=saas-mercadopago.appspot.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=saas-mercadopago
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=saas-mercadopago.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAOSzMtAz3os1wCYKfd1Fhor1feJGTFcEY
+SUCCESS_REDIRECT_URL=http://localhost:3000/success
+MERCADO_PAGO_ACCESS_TOKEN=TEST-5451710554063836-081815-2e6df1c787b904657c2fcac56e7b3586-486596499
