--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mercadopago": "^2.0.11",
     "next": "14.2.5",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18"
   },
   "devDependencies": {
