--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.19.2",
     "firebase": "^10.13.0",
     "mercadopago": "^2.0.11",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18"
