--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@mercadopago/sdk-react": "^0.0.19",
     "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.13.0",
+    "flowbite-react": "^0.10.2",
     "mercadopago": "^2.0.11",
     "next": "^14.2.13",
     "react": "^18",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.3",
+    "daisyui": "^4.12.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
