--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^14.2.13",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "saas": "file:"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
